# lfstage

./: .gitignore  .gitmodules  CHANGES.md  Cargo.toml  Makefile  README.md  TDL  config.toml  log4rs.yaml
envs/: base.env  build.env  chroot.env  prechroot.env
etc/lfstage/: config.toml
man/: lfstage-profile.5.scd  lfstage-sources.5.scd  lfstage.1.scd
scripts/: 00-reqs.sh  01-setup.sh  02-getsources.sh  05-chapter5.sh  06-chapter6.sh  07-chapter7.sh  aslfs.sh  ch5.sh  ch5and6.sh  ch6.sh  ch7.sh  chroot.sh  custom-tarball.sh  getsources.sh  package.sh  part.sh  prebuild.sh  reqs.sh
scripts/libexec/: chroot.sh
src/: cmd.rs  config.rs  globals.rs  macros.rs  main.rs  profile.rs
src/cli/: build.rs  clean.rs  download.rs  export.rs  import.rs  list.rs  mod.rs
src/utils/: cmd.rs  debug.rs  dl.rs  init.rs  mod.rs  time.rs
usr/lib/lfstage/envs/: internal.env
usr/lib/lfstage/scripts/: clean.sh  export.sh  import.sh  reqs.sh  save.sh  testing.sh
var/lib/lfstage/profiles/x86_64-glibc-tox-stage2/: README.md  sources
var/lib/lfstage/profiles/x86_64-glibc-tox-stage2/envs/: base.env  build.env
var/lib/lfstage/profiles/x86_64-glibc-tox-stage2/scripts/: 00-reqs.sh  02-getsources.sh  04-chapter4.sh  05-chapter5.sh  06-chapter6.sh  07-chapter7.sh
var/lib/lfstage/profiles/x86_64-glibc-tox-stage2/scripts/libexec/: chroot.sh
